[gd_scene load_steps=5 format=2]

[ext_resource path="res://theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://battle/sprites/icons/target.png" type="Texture" id=2]
[ext_resource path="res://battle/scripts/enemy.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Enemy" type="TextureButton"]
mouse_filter = 2
mouse_default_cursor_shape = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = -0.2
anchor_right = 0.5
anchor_bottom = -0.2
margin_left = -32.0
margin_right = 32.0
margin_bottom = 14.0
theme = ExtResource( 1 )
step = 1.0
value = 100.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Health"]
anchor_right = 1.0
anchor_bottom = 1.0
bbcode_enabled = true
bbcode_text = "[center]999/999[/center]"
text = "999/999"
scroll_active = false
__meta__ = {
"_edit_lock_": true
}

[node name="Target" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 1 )

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
